--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="timer" id="timer"></div>
     <div class="wpm" id="wpm"></div>
     <div class="container">
-        <div class="quote-display" id="quote">Watchu lookin at</div>
+        <div class="quote-display" id="quote">Click on the start button</div>
         <textarea class="input-Text" id="inputText" autofocus></textarea>
         <button class="again" id="again">Start</button>
     </div>
